json lexical parser

--- a/experiments/contextual_dictionary.ipynb
+++ b/experiments/contextual_dictionary.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 44,
    "id": "0f95c324-b66c-4936-acda-7cecd7004623",
    "metadata": {},
    "outputs": [],
@@ -61,19 +61,41 @@
     "from functools import lru_cache\n",
     "from typing import Any, Dict\n",
     "\n",
+    "from pydantic import Field\n",
+    "import json\n",
     "from langchain_core.prompts import ChatPromptTemplate\n",
     "from langchain_openai import ChatOpenAI\n",
     "import openai\n",
     "from langchain.schema import BaseOutputParser\n",
     "\n",
+    "class SimpleOutputParser(BaseOutputParser[str]):\n",
+    "    \"\"\"Simple output parser.\"\"\"\n",
+    "\n",
+    "    def parse(self, text: str) -> str:\n",
+    "        return text\n",
+    "\n",
+    "class SentenceOutputParser(BaseOutputParser):\n",
+    "    retry_count: int = Field(default=1, description=\"Number of retry attempts for JSON parsing\")\n",
+    "    \n",
+    "    def parse(self, text: str) -> str:\n",
+    "        for _ in range(self.retry_count + 1):\n",
+    "            try:\n",
+    "                json_result = json.loads(text)\n",
+    "                if \"translation\" not in json_result:\n",
+    "                    json_result[\"translation\"] = text\n",
+    "            except json.JSONDecodeError:\n",
+    "                if _ == self.retry_count:\n",
+    "                    json_result = {\"translation\": text}\n",
+    "        text_language = json_result.get(\"text_language\")\n",
+    "        translation = json_result[\"translation\"]\n",
+    "        if text_language:\n",
+    "            json_result[\"translation\"] = f\"({text_language}) {translation}\"\n",
+    "        result = f\"\"\"{json_result[\"translation\"]}<hr>{json_result.get(\"comments\", \"\")}\"\"\"\n",
+    "        return result\n",
+    "            \n",
     "def _create_article_templates(self) -> Dict[str, Any]:\n",
-    "        class SimpleOutputParser(BaseOutputParser[str]):\n",
-    "            \"\"\"Simple output parser.\"\"\"\n",
-    "\n",
-    "            def parse(self, text: str) -> str:\n",
-    "                return text\n",
-    "\n",
     "        parser = SimpleOutputParser()\n",
+    "        sentence_parser = SentenceOutputParser(retry_count=1)\n",
     "\n",
     "        translation_system_template = \"\"\"Given the following text in {text_language},\n",
     "translate the term marked with <span class=\"highlighted-term\"> tag to {user_language}. \n",
@@ -141,9 +163,8 @@
     "        )\n",
     "\n",
     "        sentence_system_template = \"\"\"Given following text translate to\n",
-    "{user_language} the sentence with term marked with a <span class=\"highlighted-term\"> tag.\n",
-    "Translate only the full sentence with the term marked with a <span class=\"highlighted-term\"> tag\n",
-    "and not other parts of the text.\n",
+    "{user_language} only the sentence with term marked with a <span class=\"highlighted-term\"> tag inside.\n",
+    "Translate only the sentence and not other parts of the text.\n",
     "Expected text language is {text_language} but you should detect the actual language if it does not fit.\n",
     "Give comments in {user_language} about parts that can be difficult to understand by\n",
     "{user_language} student learning {text_language} - difficult words, forms and expressions etc.\n",
@@ -163,25 +184,165 @@
     "            \"Dictionary\": {\"template\": dictionary_prompt_template, \"parser\": parser},\n",
     "            \"Examples\": {\"template\": examples_prompt_template, \"parser\": parser},\n",
     "            \"Explain\": {\"template\": explain_prompt_template, \"parser\": parser},\n",
-    "            \"Sentence\": {\"template\": sentence_prompt_template, \"parser\": parser},\n",
+    "            \"Sentence\": {\"template\": sentence_prompt_template, \"parser\": sentence_parser},\n",
     "        }\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 44,
+   "id": "638aa2c4-d1ee-4641-ad95-f96421d51286",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from functools import lru_cache\n",
+    "from typing import Any, Dict\n",
+    "\n",
+    "from pydantic import Field\n",
+    "import json\n",
+    "from langchain_core.prompts import ChatPromptTemplate\n",
+    "from langchain_openai import ChatOpenAI\n",
+    "import openai\n",
+    "from langchain.schema import BaseOutputParser\n",
+    "\n",
+    "class SimpleOutputParser(BaseOutputParser[str]):\n",
+    "    \"\"\"Simple output parser.\"\"\"\n",
+    "\n",
+    "    def parse(self, text: str) -> str:\n",
+    "        return text\n",
+    "\n",
+    "class SentenceOutputParser(BaseOutputParser):\n",
+    "    retry_count: int = Field(default=1, description=\"Number of retry attempts for JSON parsing\")\n",
+    "    \n",
+    "    def parse(self, text: str) -> str:\n",
+    "        for _ in range(self.retry_count + 1):\n",
+    "            try:\n",
+    "                json_result = json.loads(text)\n",
+    "                if \"translation\" not in json_result:\n",
+    "                    json_result[\"translation\"] = text\n",
+    "            except json.JSONDecodeError:\n",
+    "                if _ == self.retry_count:\n",
+    "                    json_result = {\"translation\": text}\n",
+    "        text_language = json_result.get(\"text_language\")\n",
+    "        translation = json_result[\"translation\"]\n",
+    "        if text_language:\n",
+    "            json_result[\"translation\"] = f\"({text_language}) {translation}\"\n",
+    "        result = f\"\"\"{json_result[\"translation\"]}<hr>{json_result.get(\"comments\", \"\")}\"\"\"\n",
+    "        return result\n",
+    "            \n",
+    "def _create_article_templates(self) -> Dict[str, Any]:\n",
+    "        parser = SimpleOutputParser()\n",
+    "        sentence_parser = SentenceOutputParser(retry_count=1)\n",
+    "\n",
+    "        translation_system_template = \"\"\"Given the following text in {text_language},\n",
+    "translate the term marked with <span class=\"highlighted-term\"> tag to {user_language}. \n",
+    "Give translation of the term in the exact sentence where the term is (and not all occurrences in the text).\n",
+    "Put into result only the term translation.\n",
+    "If the text is not in {text_language}, prefix the result with the text language name in parentheses, like (Latin).\n",
+    "\"\"\"\n",
+    "\n",
+    "        translation_prompt_template = ChatPromptTemplate.from_messages(\n",
+    "            [(\"system\", translation_system_template), (\"user\", \"{text}\")]\n",
+    "        )\n",
+    "\n",
+    "        dictionary_system_template = \"\"\"Given the term in {text_language},\n",
+    "write {text_language} - {user_language} dictionary article for the term.\n",
+    "The article should be in {user_language}.\n",
+    "Include grammar attributes - part of the speech, genre, number, countability and other grammar attributes.\n",
+    "All grammar attributes should be on one line in a compact way with abbreviations like in good dictionaries.\n",
+    "Include different meanings, declination table and other information you expect to see in a good dictionary\n",
+    "like Oxford, but do not include examples.\n",
+    "If you are sure the text is in a different language, write the article based on that language and indicate\n",
+    "it by starting the result with the detected language name in parentheses.\n",
+    "Give the result in HTML formatting, without any block marks.\"\"\"\n",
+    "\n",
+    "        dictionary_prompt_template = ChatPromptTemplate.from_messages(\n",
+    "            [(\"system\", dictionary_system_template), (\"user\", \"The term is: {term}\")]\n",
+    "        )\n",
+    "\n",
+    "        examples_system_template = \"\"\"Given the term in {text_language},\n",
+    "provide up to seven examples in {text_language} of sentences with the term.\n",
+    "After each example, provide the translation of the example to {user_language} in a separate paragraph \n",
+    "using the <p> tag.\n",
+    "Do not prefix the translation with ({user_language}) or with \"Translation.\" \n",
+    "Separate examples with <hr> tags. \n",
+    "Provide the result in HTML formatting, without any block marks.\n",
+    "\n",
+    "Ensure your response adheres strictly to these instructions:\n",
+    "- Do not repeat examples.\n",
+    "- If you detect a language different from {text_language}, mention that, \n",
+    "but do not mention the language if it is {text_language}.\n",
+    "- Do not mark the translation with \"Translation\" or similar terms.\n",
+    "        \"\"\"\n",
+    "\n",
+    "        examples_prompt_template = ChatPromptTemplate.from_messages(\n",
+    "            [(\"system\", examples_system_template), (\"user\", \"The term is: {term}\")]\n",
+    "        )\n",
+    "\n",
+    "        explain_system_template = \"\"\"Explain using only {text_language}, the usage\n",
+    "of the term marked in the text with a <span class=\"highlighted-term\"> tag.\n",
+    "Explain the usage only in the sentence where the term\n",
+    "is marked with the <span class=\"highlighted-term\"> tag, and not in other occurrences of the text.\n",
+    "Only if the text is not in {text_language}, start with the detected language in parentheses.\n",
+    "After <hr> provide the translation of the explanation to {user_language}.\n",
+    "Give the result in HTML formatting without any additional block marks or labels.\n",
+    "\n",
+    "Ensure your response adheres strictly to these instructions:\n",
+    "- Use {text_language} for the initial explanation.\n",
+    "- Never put into the result names of the languages {text_language} or {user_language}.\n",
+    "- Explain the exact sentence where the term is marked with the <span class=\"highlighted-term\"> tag.\n",
+    "Do not mention usage of the term in sentences where it is not marked\n",
+    "with the <span class=\"highlighted-term\"> tag.\n",
+    "\"\"\"\n",
+    "\n",
+    "        explain_prompt_template = ChatPromptTemplate.from_messages(\n",
+    "            [(\"system\", explain_system_template), (\"user\", \"{text}\")]\n",
+    "        )\n",
+    "\n",
+    "        sentence_system_template = \"\"\"Given following text translate to\n",
+    "{user_language} only the sentence with term marked with a <span class=\"highlighted-term\"> tag inside.\n",
+    "Translate only the sentence and not other parts of the text.\n",
+    "Expected text language is {text_language} but you should detect the actual language if it does not fit.\n",
+    "Give comments in {user_language} about parts that can be difficult to understand by\n",
+    "{user_language} student learning {text_language} - difficult words, forms and expressions etc.\n",
+    "Return result in json without any additional block marks or labels:\n",
+    "\"translation\" - translation;\n",
+    "\"sentence\" - the original sentence with the marked term;\n",
+    "\"text_language\" - ISO639 set-1 code of the actual text language;\n",
+    "\"comments\" - comments.\n",
+    "\"\"\"\n",
+    "\n",
+    "        sentence_prompt_template = ChatPromptTemplate.from_messages(\n",
+    "            [(\"system\", sentence_system_template), (\"user\", \"The text is: {text}\")]\n",
+    "        )\n",
+    "\n",
+    "        return {\n",
+    "            \"Translate\": {\"template\": translation_prompt_template, \"parser\": parser},\n",
+    "            \"Dictionary\": {\"template\": dictionary_prompt_template, \"parser\": parser},\n",
+    "            \"Examples\": {\"template\": examples_prompt_template, \"parser\": parser},\n",
+    "            \"Explain\": {\"template\": explain_prompt_template, \"parser\": parser},\n",
+    "            \"Sentence\": {\"template\": sentence_prompt_template, \"parser\": sentence_parser},\n",
+    "        }\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "id": "38b2232f-0272-4621-bcc5-f9ffe75cc4d3",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(sr) The <span class=\"highlighted-term\">leaf</span> fell from the tree.<hr>The term 'list' can mean both 'leaf' and 'list' in Serbian, so it's important to understand the context to determine the correct translation.\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
-       "{\n",
-       "    \"translation\": \"It moves everything.\",\n",
-       "    \"sentence\": \"<span class=\\\"highlighted-term\\\">list</span> sa drveta je pao na zemlju.\",\n",
-       "    \"text_language\": \"sr\",\n",
-       "    \"comments\": \"The term 'list' in Serbian can mean both 'leaf' and 'sheet' in English, depending on the context. In this sentence, it refers to a leaf falling from a tree.\"\n",
-       "}"
+       "(sr) The <span class=\"highlighted-term\">leaf</span> fell from the tree.<hr>The term 'list' can mean both 'leaf' and 'list' in Serbian, so it's important to understand the context to determine the correct translation."
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
