separate sentence detection

--- a/experiments/contextual_dictionary.ipynb
+++ b/experiments/contextual_dictionary.ipynb
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 56,
    "id": "638aa2c4-d1ee-4641-ad95-f96421d51286",
    "metadata": {},
    "outputs": [],
@@ -212,7 +212,7 @@
     "    def parse(self, text: str) -> str:\n",
     "        return text\n",
     "\n",
-    "class SentenceOutputParser(BaseOutputParser):\n",
+    "class SentenceOutputParser(BaseOutputParser[str]):\n",
     "    retry_count: int = Field(default=1, description=\"Number of retry attempts for JSON parsing\")\n",
     "    \n",
     "    def parse(self, text: str) -> str:\n",
@@ -307,9 +307,9 @@
     "Give comments in {user_language} about parts that can be difficult to understand by\n",
     "{user_language} student learning {text_language} - difficult words, forms and expressions etc.\n",
     "Return result in json without any additional block marks or labels:\n",
-    "\"translation\" - translation;\n",
+    "\"translation\" - the sentence translation to {user_language};\n",
     "\"sentence\" - the original sentence with the marked term;\n",
-    "\"text_language\" - ISO639 set-1 code of the actual text language;\n",
+    "\"text_language\" - the actual text language. Null in this field if the text language is {text_language};\n",
     "\"comments\" - comments.\n",
     "\"\"\"\n",
     "\n",
@@ -328,21 +328,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 49,
    "id": "38b2232f-0272-4621-bcc5-f9ffe75cc4d3",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(sr) The <span class=\"highlighted-term\">leaf</span> fell from the tree.<hr>The term 'list' can mean both 'leaf' and 'list' in Serbian, so it's important to understand the context to determine the correct translation.\n"
-     ]
-    },
-    {
      "data": {
       "text/html": [
-       "(sr) The <span class=\"highlighted-term\">leaf</span> fell from the tree.<hr>The term 'list' can mean both 'leaf' and 'list' in Serbian, so it's important to understand the context to determine the correct translation."
+       "Лист с дрвета пао је на земљу.<hr><hr>Српска реч \"лист\" може бити заблудљива за рускоговорящего, јер у руском језику иста реч (лист) значи \"лист\" и \"страница\"."
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -350,6 +343,94 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "**************************************************\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "The leaf from the tree fell to the ground.<hr><hr>The word 'list' in Serbian can mean both 'leaf' and 'list' in English, which might be confusing for English speakers."
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "**************************************************\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "(Латынь) врачу, духовному наставнику и покровителю открой самое внутреннее.<hr><hr>Фраза 'intima pande' может вызвать затруднения из-за устаревшего лексического значения слова 'intima' в современном русском языке."
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "**************************************************\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "(Латынь) Бог из машины.<hr><hr>Выражение \"Deus ex machina\" является латинским фразеологизмом, который означает неожиданное вмешательство божественной силы для разрешения сложной ситуации. Для русскоговорящего слушателя это выражение может быть непонятным без контекста."
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "**************************************************\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "То што се дешавало<hr><hr>Фраза 'се дешавало' може изазвати замешканости јер у руском језику нема тачне еквивалентне конструкције са 'се' као у српском. Треба обратити пажњу на правилно коришћење рефлексивних заменица у руском."
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "**************************************************\n",
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -359,13 +440,17 @@
     "sys.path.insert(0, os.path.abspath(os.path.join(os.getcwd(), '..')))\n",
     "\n",
     "import types\n",
+    "import importlib\n",
     "from IPython.display import display, HTML\n",
+    "import lexiflux.llm\n",
+    "\n",
+    "importlib.reload(lexiflux.llm)\n",
     "from lexiflux.llm import Llm\n",
     "\n",
     "# serbian_text = \"Ljubav je najlepša stvar na svetu. Ljubav pokreće sve.\"\n",
     "# word_to_translate = \"Ljubav\"\n",
     "\n",
-    "Llm._create_article_templates = types.MethodType(_create_article_templates, Llm)\n",
+    "# Llm._create_article_templates = types.MethodType(_create_article_templates, Llm)\n",
     "llm = Llm()\n",
     "\n",
     "\n",
@@ -375,17 +460,54 @@
     "}\n",
     "\n",
     "data = {\n",
-    "    \"text\": 'pokreće sve. <span class=\"highlighted-term\">list</span> sa drveta je pao na zemlju. Na stolu je bio list papira sa važnim beleškama. Ljubav je najlepša',\n",
+    "    \"text\": 'pokreće sve. <selected>List</selected> sa drveta je pao na zemlju. Na stolu je bio list papira sa važnim beleškama. Ljubav je najlepša',\n",
     "    \"term\": \"list\",\n",
-    "    # \"text\": 'Abbati, medico, patronoque <span class=\"highlighted-term\">intima pande</span>.',\n",
+    "    # \"text\": 'Abbati, medico, patronoque <selected>intima pande</selected>.',\n",
     "    # \"term\": \"intima pande\",\n",
+    "    # \"text\" : '<selected>Deus</selected> ex machina.',\n",
+    "    # \"term\": \"Deus\",\n",
     "    \"text_language\": \"Serbian\",\n",
-    "    \"user_language\": \"English\"\n",
+    "    # \"user_language\": \"English\",\n",
+    "    \"user_language\": \"Russian\",\n",
     "}\n",
     "\n",
-    "article = llm.get_article(article_name, article_params, data)\n",
-    "display(HTML(article))\n",
-    "\n"
+    "texts = [\n",
+    "    {\n",
+    "    \"text\": 'pokreće sve. **List** sa drveta je pao na zemlju. Na stolu je bio list papira sa važnim beleškama. Ljubav je najlepša',\n",
+    "    \"text_language\": \"Serbian\",\n",
+    "    \"user_language\": \"Russian\",\n",
+    "    },\n",
+    "    {\n",
+    "    \"text\": 'pokreće sve. **List** sa drveta je pao na zemlju. Na stolu je bio list papira sa važnim beleškama. Ljubav je najlepša',\n",
+    "    \"text_language\": \"Serbian\",\n",
+    "    \"user_language\": \"English\",\n",
+    "    },\n",
+    "    {\n",
+    "    \"text\": 'Abbati, medico, patronoque **intima pande**.',\n",
+    "    \"text_language\": \"Serbian\",\n",
+    "    \"user_language\": \"Russian\",\n",
+    "    },\n",
+    "    {\n",
+    "    \"text\" : '**Deus** ex machina.',\n",
+    "    \"text_language\": \"Serbian\",\n",
+    "    \"user_language\": \"Russian\",\n",
+    "    },\n",
+    "    {\n",
+    "    \"text\" : 'na brzinu sam uradio jutarnju gimnastiku i obukao se. To što **se dešavalo** delovalo mi je krajnje interesantno. Telefonski fonogram',\n",
+    "    \"text_language\": \"Serbian\",\n",
+    "    \"user_language\": \"Russian\",\n",
+    "    },\n",
+    "]\n",
+    "for text in texts:\n",
+    "    data[\"text\"] = text[\"text\"]\n",
+    "    data[\"text_language\"] = text[\"text_language\"]\n",
+    "    data[\"user_language\"] = text[\"user_language\"]\n",
+    "    # print(llm._detect_sentence(\"\", llm._hashable_dict(article_params), llm._hashable_dict(data)))\n",
+    "    \n",
+    "    article = llm.get_article(article_name, article_params, data)\n",
+    "    display(HTML(article))\n",
+    "    print(\"*\"*50)\n",
+    "    print()\n"
    ]
   },
   {
