json in examples LLM output

--- a/experiments/contextual_dictionary.ipynb
+++ b/experiments/contextual_dictionary.ipynb
@@ -328,14 +328,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 64,
    "id": "38b2232f-0272-4621-bcc5-f9ffe75cc4d3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "Лист с дрвета пао је на земљу.<hr><hr>Српска реч \"лист\" може бити заблудљива за рускоговорящего, јер у руском језику иста реч (лист) значи \"лист\" и \"страница\"."
+       "U ovoj rečenici, reč 'list' se koristi u značenju 'komad papira' ili 'papirić'.<hr>В этом предложении слово 'list' используется в значении 'лист бумаги' или 'записка'."
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -355,67 +355,7 @@
     {
      "data": {
       "text/html": [
-       "The leaf from the tree fell to the ground.<hr><hr>The word 'list' in Serbian can mean both 'leaf' and 'list' in English, which might be confusing for English speakers."
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "**************************************************\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "(Латынь) врачу, духовному наставнику и покровителю открой самое внутреннее.<hr><hr>Фраза 'intima pande' может вызвать затруднения из-за устаревшего лексического значения слова 'intima' в современном русском языке."
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "**************************************************\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "(Латынь) Бог из машины.<hr><hr>Выражение \"Deus ex machina\" является латинским фразеологизмом, который означает неожиданное вмешательство божественной силы для разрешения сложной ситуации. Для русскоговорящего слушателя это выражение может быть непонятным без контекста."
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "**************************************************\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "То што се дешавало<hr><hr>Фраза 'се дешавало' може изазвати замешканости јер у руском језику нема тачне еквивалентне конструкције са 'се' као у српском. Треба обратити пажњу на правилно коришћење рефлексивних заменица у руском."
+       "U ovoj rečenici, reč 'list' se odnosi na deo drveta koji je pao na zemlju, što je jasno iz konteksta rečenice.<hr>In this sentence, the word 'list' refers to a part of a tree that fell on the ground, as it is clear from the context of the sentence."
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -454,7 +394,7 @@
     "llm = Llm()\n",
     "\n",
     "\n",
-    "article_name = \"Sentence\"\n",
+    "article_name = \"Explain\"\n",
     "article_params = {\n",
     "    \"model_name\": \"gpt-3.5-turbo\"  # \"gpt-4-turbo\"  # Specify the model to use\n",
     "}\n",
