cache detected sentences

--- a/experiments/contextual_dictionary.ipynb
+++ b/experiments/contextual_dictionary.ipynb
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "API key is valid. Available models: ['whisper-1', 'tts-1', 'dall-e-2', 'tts-1-hd-1106', 'tts-1-hd', 'gpt-3.5-turbo-1106', 'gpt-4-0125-preview', 'gpt-4-turbo-preview', 'text-embedding-3-small', 'text-embedding-3-large', 'gpt-3.5-turbo-16k', 'gpt-4-1106-preview', 'gpt-4-turbo-2024-04-09', 'babbage-002', 'gpt-4o-2024-05-13', 'gpt-4-turbo', 'gpt-4', 'gpt-4-0613', 'dall-e-3', 'gpt-3.5-turbo-0125', 'tts-1-1106', 'gpt-3.5-turbo', 'gpt-3.5-turbo-instruct', 'gpt-3.5-turbo-instruct-0914', 'text-embedding-ada-002', 'davinci-002', 'gpt-4o']\n"
+      "API key is valid. Available models: ['whisper-1', 'tts-1', 'dall-e-2', 'tts-1-hd-1106', 'tts-1-hd', 'gpt-4-turbo-2024-04-09', 'gpt-4-turbo', 'gpt-3.5-turbo-1106', 'dall-e-3', 'gpt-4-0125-preview', 'gpt-4-turbo-preview', 'text-embedding-3-small', 'text-embedding-3-large', 'gpt-3.5-turbo-16k', 'gpt-4-1106-preview', 'babbage-002', 'gpt-4o-2024-05-13', 'gpt-4', 'gpt-4-0613', 'gpt-3.5-turbo-0125', 'tts-1-1106', 'gpt-3.5-turbo', 'gpt-3.5-turbo-instruct', 'gpt-3.5-turbo-instruct-0914', 'text-embedding-ada-002', 'davinci-002', 'gpt-4o']\n"
      ]
     }
    ],
@@ -328,34 +328,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 9,
    "id": "38b2232f-0272-4621-bcc5-f9ffe75cc4d3",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "U ovoj rečenici, reč 'list' se koristi u značenju 'komad papira' ili 'papirić'.<hr>В этом предложении слово 'list' используется в значении 'лист бумаги' или 'записка'."
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "**************************************************\n",
-      "\n"
+      "Detected sentence: {'text': 'pokreće sve. ||**List** sa drveta je pao na zemlju.|| Na stolu je bio list papira sa važnim beleškama. Ljubav je najlepša', 'detected_language': 'Serbian'}\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "U ovoj rečenici, reč 'list' se odnosi na deo drveta koji je pao na zemlju, što je jasno iz konteksta rečenice.<hr>In this sentence, the word 'list' refers to a part of a tree that fell on the ground, as it is clear from the context of the sentence."
+       "Reč 'list' se koristi u značenju 'komad papira' u ovoj rečenici. U ovom kontekstu, 'list' označava fizički komad papira sa napisanim informacijama.<hr>Слово 'лист' используется в значении 'лист бумаги' в этом предложении. В этом контексте 'лист' обозначает физический лист бумаги с записанными информациями."
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -409,6 +396,9 @@
     "    \"text_language\": \"Serbian\",\n",
     "    # \"user_language\": \"English\",\n",
     "    \"user_language\": \"Russian\",\n",
+    "    \"word_ids\": (0, ),\n",
+    "    \"book_code\": \"my-book\",\n",
+    "    \"page_number\": 1,\n",
     "}\n",
     "\n",
     "texts = [\n",
@@ -438,7 +428,7 @@
     "    \"user_language\": \"Russian\",\n",
     "    },\n",
     "]\n",
-    "for text in texts:\n",
+    "for text in texts[:1]:\n",
     "    data[\"text\"] = text[\"text\"]\n",
     "    data[\"text_language\"] = text[\"text_language\"]\n",
     "    data[\"user_language\"] = text[\"user_language\"]\n",
